--- a/template/core-dist/package.json
+++ b/template/core-dist/package.json
@@ -29,7 +29,9 @@
     "@angular/router": "3.2.4",
     "angular2-google-maps": "^0.16.0",
     "angular2-highcharts": "^0.4.1",
+    "angular2-jwt": "^0.1.28",
     "angulartics2": "1.5.2",
+    "auth0-lock": "^10.10.2",
     "core-js": "^2.4.0",
     "font-awesome": "^4.7.0",
     "google-material-color": "^1.3.1",
