--- a/template/core-dist/package.json
+++ b/template/core-dist/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve",
+    "start": "ng serve -H 0.0.0.0",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
