--- a/template/core-dist/package.json
+++ b/template/core-dist/package.json
@@ -4,6 +4,7 @@
   "angular-cli": {},
   "scripts": {
     "start": "ng serve -H 0.0.0.0",
+    "build.dev": "ng build --dev",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
