--- a/template/core-dist/package.json
+++ b/template/core-dist/package.json
@@ -40,6 +40,7 @@
     "google-material-color": "^1.3.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.1.1",
+    "materialize-css": "^0.98.0",
     "prismjs": "^1.5.1",
     "rxjs": "5.0.0-rc.3",
     "ts-helpers": "^1.1.2",
@@ -62,6 +63,7 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "node-sass": "^4.5.0",
     "protractor": "4.0.11",
     "ts-node": "1.7.0",
     "tslint": "3.15.1",
