--- a/template/core-dist/package.json
+++ b/template/core-dist/package.json
@@ -35,12 +35,14 @@
     "angular2-jwt": "^0.1.28",
     "angulartics2": "1.5.2",
     "auth0-lock": "^10.10.2",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.0",
     "font-awesome": "^4.7.0",
     "google-material-color": "^1.3.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.1.1",
     "materialize-css": "^0.98.0",
+    "ng2-charts": "^1.5.0",
     "prismjs": "^1.5.1",
     "rxjs": "5.0.0-rc.3",
     "ts-helpers": "^1.1.2",
