--- a/template/core-dist/package.json
+++ b/template/core-dist/package.json
@@ -52,7 +52,7 @@
     "@types/chai": "^3.4.34",
     "@types/hammerjs": "^2.0.33",
     "@types/highcharts": "4.2.42",
-    "@types/jasmine": "^2.5.38",
+    "@types/jasmine": "2.5.38",
     "@types/prismjs": "^1.4.18",
     "angular-cli": "1.0.0-beta.21",
     "autoprefixer": "^6.5.3",
