--- a/template/core-dist/package.json
+++ b/template/core-dist/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "angular-cli": {},
   "scripts": {
-    "start.dev": "ng serve -H 0.0.0.0 -environment=dev",
-    "start.prod": "ng serve -H 0.0.0.0 -environment=prod",
+    "start.dev": "ng serve -H 0.0.0.0",
+    "start.prod": "ng serve -H 0.0.0.0 --prod --aot",
     "build.dev": "ng build --dev",
     "build.prod": "ng build --prod --aot",
     "lint": "tslint \"src/**/*.ts\"",
@@ -22,6 +22,7 @@
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
     "@angular/core": "^2.3.1",
+    "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
     "@angular/platform-browser": "^2.3.1",
     "@angular/material": "2.0.0-beta.1",
@@ -46,13 +47,13 @@
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-rc.0",
     "@angular/compiler-cli": "^2.3.1",
     "@types/chai": "^3.4.34",
     "@types/hammerjs": "^2.0.33",
     "@types/highcharts": "4.2.42",
     "@types/jasmine": "2.5.38",
     "@types/prismjs": "^1.4.18",
-    "angular-cli": "1.0.0-beta.28.3",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "2.2.4",
     "codelyzer": "~1.0.0-beta.4",
@@ -64,9 +65,11 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "node-sass": "^4.5.0",
+    "postcss-loader": "^1.3.2",
     "protractor": "4.0.11",
     "ts-node": "1.7.0",
     "tslint": "3.15.1",
-    "typescript": "2.0.10"
+    "typescript": "2.0.10",
+    "webpack-dev-server": "^2.4.1"
   }
 }
