--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.0",
+    "@angular/cli": "1.0.0-rc.4",
     "@angular/compiler-cli": "^2.3.1",
     "@types/chai": "^3.4.34",
     "@types/hammerjs": "^2.0.33",
