--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "@types/hammerjs": "^2.0.33",
     "@types/highcharts": "4.2.42",
     "@types/jasmine": "2.5.38",
+    "@types/jsonwebtoken": "^7.2.0",
     "@types/prismjs": "^1.4.18",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "2.2.4",
     "codelyzer": "~1.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
+    "jsonwebtoken": "^7.2.1",
     "karma": "1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
@@ -67,6 +69,7 @@
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.3.2",
     "protractor": "5.0.0",
+    "supertest": "^3.0.0",
     "ts-node": "1.7.0",
     "tslint": "3.15.1",
     "typescript": "2.0.10",
