--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,8 @@ dependencies:
   pre:
     - aws configure set preview.cloudfront true
   post:
-    - npm run start.dev
+    - npm run start.dev:
+        background: true
 
 test:
   override:
