--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   "author": "",
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@angular/animations": "^4.0.0",
     "@angular/material": "2.0.0-beta.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/platform-server": "2.2.4",
-    "@angular/router": "^3.3.1",
     "angular2-google-maps": "^0.16.0",
     "angular2-highcharts": "^0.4.1",
     "angular2-jwt": "^0.1.28",
@@ -42,37 +42,39 @@
     "jquery": "^3.1.1",
     "materialize-css": "^0.98.0",
     "ng2-charts": "^1.5.0",
-    "rxjs": "5.0.0-rc.3",
+    "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.4",
-    "@angular/compiler-cli": "^2.3.1",
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/chai": "^3.4.34",
     "@types/hammerjs": "^2.0.33",
     "@types/highcharts": "4.2.42",
     "@types/jasmine": "2.5.38",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/prismjs": "^1.4.18",
+    "@types/node": "~6.0.60",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "2.2.4",
     "codelyzer": "~1.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
     "jsonwebtoken": "^7.2.1",
-    "karma": "1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.3.2",
     "protractor": "5.0.0",
     "supertest": "^3.0.0",
     "ts-node": "1.7.0",
     "tslint": "3.15.1",
-    "typescript": "2.0.10",
+    "typescript": "~2.2.0",
     "webpack-dev-server": "^2.4.1"
   }
 }
