--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ng2-charts": "^1.5.0",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.2",
+    "uuid": "^3.0.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
