--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   "author": "",
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "2.0.0-beta.1",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@angular/animations": "^4.0.0",
-    "@angular/material": "2.0.0-beta.1",
     "angular2-google-maps": "^0.16.0",
     "angular2-highcharts": "^0.4.1",
     "angular2-jwt": "^0.1.28",
@@ -41,6 +41,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.1.1",
     "materialize-css": "^0.98.0",
+    "moment": "^2.18.1",
     "ng2-charts": "^1.5.0",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.2",
