--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "materialize-css": "^0.98.0",
     "moment": "^2.18.1",
     "ng2-charts": "^1.5.0",
+    "ng2-daterangepicker": "^2.0.6",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.2",
     "uuid": "^3.0.1",
