--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.18.1",
     "ng2-daterangepicker": "^2.0.6",
     "ngx-infinite-scroll": "^0.4.2",
+    "numeral": "^2.0.6",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.2",
     "uuid": "^3.0.1",
@@ -58,6 +59,7 @@
     "@types/jsonwebtoken": "^7.2.0",
     "@types/prismjs": "^1.4.18",
     "@types/node": "~6.0.60",
+    "@types/numeral": "0.0.20",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "2.2.4",
     "codelyzer": "~1.0.0-beta.4",
