--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angular2-google-maps": "^0.16.0",
     "angular2-highcharts": "^0.5.5",
     "angular2-jwt": "^0.1.28",
+    "angular2-text-mask": "^8.0.1",
     "angulartics2": "1.5.2",
     "auth0-lock": "^10.10.2",
     "core-js": "^2.4.0",
