--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/moment-timezone": "^0.2.34",
     "angular2-google-maps": "^0.16.0",
     "angular2-highcharts": "^0.5.5",
     "angular2-jwt": "^0.1.28",
@@ -42,6 +43,7 @@
     "jquery": "^3.1.1",
     "materialize-css": "^0.98.0",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "ng2-daterangepicker": "^2.0.6",
     "ngx-infinite-scroll": "^0.4.2",
     "numeral": "^2.0.6",
