--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "angulartics2": "1.5.2",
     "auth0-lock": "^10.10.2",
     "core-js": "^2.4.0",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "google-material-color": "^1.3.1",
     "hammerjs": "^2.0.8",
@@ -56,6 +57,7 @@
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@types/chai": "^3.4.34",
+    "@types/file-saver": "0.0.1",
     "@types/hammerjs": "^2.0.33",
     "@types/highcharts": "4.2.42",
     "@types/jasmine": "2.5.38",
