--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ngx-infinite-scroll": "^0.4.2",
     "numeral": "^2.0.6",
     "rxjs": "^5.1.0",
+    "text-mask-addons": "^3.5.1",
     "ts-helpers": "^1.1.2",
     "uuid": "^3.0.1",
     "zone.js": "^0.8.4"
