--- a/package.json
+++ b/package.json
@@ -34,14 +34,17 @@
     "angular2-text-mask": "^8.0.1",
     "angulartics2": "1.5.2",
     "auth0-lock": "^10.10.2",
+    "codemirror": "^5.26.0",
     "core-js": "^2.4.0",
     "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "google-material-color": "^1.3.1",
     "hammerjs": "^2.0.8",
+    "js-beautify": "^1.6.14",
     "materialize-css": "^0.98.0",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
+    "ng2-codemirror": "^1.1.2",
     "ng2-daterangepicker": "^2.0.6",
     "ngx-infinite-scroll": "^0.4.2",
     "numeral": "^2.0.6",
