--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "numeral": "^2.0.6",
     "rxjs": "^5.1.0",
     "text-mask-addons": "^3.5.1",
+    "tinymce": "^4.6.4",
     "uuid": "^3.0.1",
     "zone.js": "^0.8.4"
   },
@@ -66,6 +67,7 @@
     "@types/moment-timezone": "^0.2.34",
     "@types/node": "~6.0.60",
     "@types/numeral": "0.0.20",
+    "@types/tinymce": "^4.5.6",
     "@types/prismjs": "^1.4.18",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "2.2.4",
