--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "moment-timezone": "^0.5.13",
     "ng2-codemirror": "^1.1.2",
     "ng2-daterangepicker": "^2.0.6",
+    "ngx-clipboard": "^8.0.3",
     "ngx-infinite-scroll": "^0.4.2",
     "numeral": "^2.0.6",
     "rxjs": "^5.1.0",
