--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,10 @@ machine:
 
 dependencies:
   pre:
+    - openssl aes-256-cbc -d -in ./deployment/config/aws.$CIRCLE_BRANCH.encrypted -k $SIX_SKELETON_KEY >> ~/.circlerc
     - aws configure set preview.cloudfront true
+  post:
+    - echo "$AWS_ACCOUNT $AWS_REGION $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY"
 
 test:
   override:
@@ -26,5 +29,4 @@ deployment:
   development:
     branch: development
     commands:
-      - ./deployment/build.sh
       - ./deployment/merge_branches.sh development staging
