Modify build script to enable building different environments

--- a/circle.yml
+++ b/circle.yml
@@ -29,5 +29,5 @@ deployment:
   development:
     branch: development
     commands:
-      - ./deployment/build.sh
+      - ./deployment/build.sh development
       - ./deployment/merge_branches.sh development staging
