Add distribution id and s3 bucket for staging environment

--- a/circle.yml
+++ b/circle.yml
@@ -25,6 +25,7 @@ deployment:
   staging:
     branch: staging
     comands:
+      - ./deployment/build.sh staging
 
   development:
     branch: development
