Fix typo in circle yml

--- a/circle.yml
+++ b/circle.yml
@@ -24,7 +24,7 @@ test:
 deployment:
   staging:
     branch: staging
-    comands:
+    commands:
       - ./deployment/build.sh staging
 
   development:
