--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "angular-cli": {},
   "scripts": {
     "start.dev": "ng serve -H 0.0.0.0",
+    "start.stage": "ng serve -H 0.0.0.0 --environment=stage --aot",
     "start.prod": "ng serve -H 0.0.0.0 --prod --aot",
     "build.dev": "ng build --dev",
+    "build.stage": "ng build --environment=stage --prod --aot",
     "build.prod": "ng build --prod --aot",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
