--- a/circle.yml
+++ b/circle.yml
@@ -26,7 +26,7 @@ deployment:
   production:
     branch: production
     commands:
-      - echo "DEPLOY PRODUCTION (TO DO)"
+      - ./deployment/build.sh production
 
   staging:
     branch: staging
