--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start.dev": "ng serve -H 0.0.0.0",
     "start.stage": "ng serve -H 0.0.0.0 --environment=stage --aot",
     "start.prod": "ng serve -H 0.0.0.0 --prod --aot",
-    "build.dev": "ng build --dev",
+    "build.dev": "ng build --environment=dev --prod --aot",
     "build.stage": "ng build --environment=stage --prod --aot",
     "build.prod": "ng build --prod --aot",
     "lint": "tslint \"src/**/*.ts\"",
