--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "angular-cli": {},
   "scripts": {
-    "start": "ng serve -H 0.0.0.0",
+    "start": "ng serve -H 0.0.0.0 --environment=local",
     "start.stage": "ng serve -H 0.0.0.0 --environment=stage --aot",
     "start.prod": "ng serve -H 0.0.0.0 --prod --aot",
     "build.dev": "ng build --environment=dev --prod --aot",
