Revert circle changes to enable admin.sixcrm build

--- a/circle.yml
+++ b/circle.yml
@@ -37,5 +37,5 @@ deployment:
   development:
     branch: development
     commands:
-      - ./deployment/build.sh test-admin.sixcrm.com development
-      # - ./deployment/merge_branches.sh development staging
+      - ./deployment/build.sh admin.sixcrm.com development
+      - ./deployment/merge_branches.sh development staging
