--- a/circle.yml
+++ b/circle.yml
@@ -26,16 +26,16 @@ deployment:
   production:
     branch: production
     commands:
-      - ./deployment/build.sh admin.sixcrm.com production
+      - ./deployment/build.sh admin.sixcrm.com
 
   staging:
     branch: staging
     commands:
-      - ./deployment/build.sh admin.sixcrm.com staging
+      - ./deployment/build.sh admin.sixcrm.com
       - ./deployment/merge_branches.sh staging production
 
   development:
     branch: development
     commands:
-      - ./deployment/build.sh admin.sixcrm.com development
+      - ./deployment/build.sh admin.sixcrm.com
       - ./deployment/merge_branches.sh development staging
