--- a/circle.yml
+++ b/circle.yml
@@ -27,15 +27,28 @@ deployment:
     branch: production
     commands:
       - ./deployment/build.sh admin.sixcrm.com
+      - node deployment/deploy-s3.js admin.sixcrm.com
+      - node deployment/deploy-cloudfront.js admin.sixcrm.com
 
   staging:
     branch: staging
     commands:
       - ./deployment/build.sh admin.sixcrm.com
+      - node deployment/deploy-s3.js admin.sixcrm.com
+      - node deployment/deploy-cloudfront.js admin.sixcrm.com
       - ./deployment/merge_branches.sh staging production
 
   development:
     branch: development
     commands:
+      # Build Angular App
       - ./deployment/build.sh admin.sixcrm.com
+
+      # Deploy App to S3
+      - node deployment/deploy-s3.js admin.sixcrm.com
+
+      # Add/Update CloudFront Distribution
+      - node deployment/deploy-cloudfront.js admin.sixcrm.com
+
+      # Promote changes
       - ./deployment/merge_branches.sh development staging
