--- a/package.json
+++ b/package.json
@@ -71,10 +71,11 @@
     "@types/moment-timezone": "^0.2.34",
     "@types/node": "~6.0.60",
     "@types/numeral": "0.0.20",
-    "@types/tinymce": "^4.5.6",
     "@types/prismjs": "^1.4.18",
+    "@types/tinymce": "^4.5.6",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "2.2.4",
+    "aws-sdk": "^2.97.0",
     "codelyzer": "~1.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
