--- a/circle.yml
+++ b/circle.yml
@@ -56,7 +56,7 @@ deployment:
       - node deployment/deploy-cloudfront.js admin.sixcrm.com
 
       # Run e2e tests before propagation
-      - npm run e2e-full
+      - npm run e2e.dev
 
       # Promote changes
       - node ./deployment/merge-branches.js
