--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor",
-    "e2e-full": "ng e2e"
+    "e2e.local": "protractor",
+    "e2e.dev": "protractor --baseUrl='https://development-admin.sixcrm.com'",
+    "e2e.stage": "protractor --baseUrl='https://staging-admin.sixcrm.com'",
+    "e2e.prod": "protractor --baseUrl='https://admin.sixcrm.com'",
+    "e2e-custom": "ng e2e"
   },
   "repository": {
     "url": "",
