--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,7 @@ machine:
 
 dependencies:
   pre:
+    - git submodule update --init --recursive
     - openssl aes-256-cbc -d -in ./deployment/config/aws.$CIRCLE_BRANCH.encrypted -k $SIX_SKELETON_KEY >> ~/.circlerc
     - aws configure set preview.cloudfront true
   post:
