--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ machine:
 
 checkout:
   post:
-    - git submodule update --init
+    - git submodule update --init --remote --merge
 
 dependencies:
   pre:
