--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "angular2-highcharts": "^0.5.5",
+    "angular2-highcharts": "0.5.5",
     "angular2-jwt": "^0.1.28",
     "angular2-text-mask": "^8.0.1",
     "angulartics2": "1.5.2",
@@ -72,6 +72,7 @@
     "@types/hammerjs": "^2.0.33",
     "@types/highcharts": "4.2.42",
     "@types/jasmine": "2.5.38",
+    "@types/jquery": "2.0.40",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/moment-timezone": "^0.2.34",
     "@types/node": "~6.0.60",
