--- a/circle.yml
+++ b/circle.yml
@@ -29,7 +29,7 @@ deployment:
     branch: production
     commands:
       - node libs/deployment_scripts/src/versioning.js
-      - ./deployment/build.sh
+      - ./libs/deployment_scripts/src/build.sh
       - node libs/deployment_scripts/src/deploy-s3.js admin.sixcrm.com
       - node libs/deployment_scripts/src/deploy-cloudfront.js admin.sixcrm.com
 
