--- a/circle.yml
+++ b/circle.yml
@@ -29,7 +29,7 @@ deployment:
     commands:
       - node libs/deployment_scripts/src/versioning.js
       - ./libs/deployment_scripts/src/build.sh
-      - node libs/deployment_scripts/src/deploy-s3.js admin.sixcrm.com
+      # - node libs/deployment_scripts/src/deploy-s3.js admin.sixcrm.com
       - node libs/deployment_scripts/src/deploy-cloudfront.js admin.sixcrm.com
 
   staging:
@@ -37,7 +37,7 @@ deployment:
     commands:
       - node libs/deployment_scripts/src/versioning.js
       - ./libs/deployment_scripts/src/build.sh
-      - node libs/deployment_scripts/src/deploy-s3.js admin.sixcrm.com
+      # - node libs/deployment_scripts/src/deploy-s3.js admin.sixcrm.com
       - node libs/deployment_scripts/src/deploy-cloudfront.js admin.sixcrm.com
       - node libs/deployment_scripts/src/merge-branches.js
 
@@ -54,7 +54,7 @@ deployment:
       - node libs/deployment_scripts/src/deploy-s3.js admin.sixcrm.com
 
       # Add/Update CloudFront Distribution
-      - node libs/deployment_scripts/src/deploy-cloudfront.js admin.sixcrm.com
+      # - node libs/deployment_scripts/src/deploy-cloudfront.js admin.sixcrm.com
 
       # Run e2e tests before propagation
       # - npm run webdriver-update
