--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "auth0-lock": "^10.10.2",
     "codemirror": "^5.26.0",
     "core-js": "^2.4.0",
+    "enhanced-resolve": "3.3.0",
     "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "google-material-color": "^1.3.1",
@@ -55,13 +56,13 @@
     "ng2-daterangepicker": "^2.0.6",
     "ngx-clipboard": "^8.0.3",
     "ngx-infinite-scroll": "^0.4.2",
+    "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
     "rxjs": "^5.1.0",
     "text-mask-addons": "^3.5.1",
     "tinymce": "^4.6.4",
     "uuid": "^3.0.1",
-    "zone.js": "^0.8.4",
-    "enhanced-resolve": "3.3.0"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
