--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   "author": "",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
+    "@angular/animations": "4.4.6",
+    "@angular/common": "4.4.6",
+    "@angular/compiler": "4.4.6",
+    "@angular/core": "4.4.6",
+    "@angular/forms": "4.4.6",
+    "@angular/http": "4.4.6",
     "@angular/material": "2.0.0-beta.1",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/platform-browser": "4.4.6",
+    "@angular/platform-browser-dynamic": "4.4.6",
+    "@angular/router": "4.4.6",
     "angular2-highcharts": "0.5.5",
     "angular2-jwt": "^0.1.28",
     "angular2-text-mask": "^8.0.1",
@@ -58,7 +58,7 @@
     "ngx-infinite-scroll": "^0.4.2",
     "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
-    "rxjs": "^5.1.0",
+    "rxjs": "5.5.0",
     "text-mask-addons": "^3.5.1",
     "tinymce": "^4.6.4",
     "uuid": "^3.0.1",
@@ -66,8 +66,8 @@
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
+    "@angular/compiler-cli": "4.4.6",
+    "@angular/language-service": "4.4.6",
     "@types/chai": "^3.4.34",
     "@types/file-saver": "0.0.1",
     "@types/hammerjs": "^2.0.33",
@@ -99,7 +99,7 @@
     "supertest": "^3.0.0",
     "ts-node": "1.7.0",
     "tslint": "3.15.1",
-    "typescript": "~2.2.0",
+    "typescript": "2.3.4",
     "webpack-dev-server": "^2.4.1"
   }
 }
