--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start.stage": "ng serve -H 0.0.0.0 --environment=stage --aot",
     "start.prod": "ng serve -H 0.0.0.0 --prod --aot",
     "build.dev": "ng build --environment=dev --prod --aot",
+    "build.local": "ng build --environment=local",
     "build.stage": "ng build --environment=stage --prod --aot",
     "build.prod": "ng build --prod --aot",
     "lint": "tslint \"src/**/*.ts\"",
