--- a/circle.yml
+++ b/circle.yml
@@ -41,8 +41,8 @@ deployment:
       - node libs/deployment_scripts/src/deploy-s3.js admin.sixcrm.com
       - node libs/deployment_scripts/src/deploy-cloudfront.js admin.sixcrm.com
 
-      - npm run webdriver-update
-      - npm run e2e.dev
+      # - npm run webdriver-update
+      # - npm run e2e.dev
 
       - node libs/deployment_scripts/src/merge-branches.js
 
