--- a/package.json
+++ b/package.json
@@ -101,6 +101,6 @@
     "ts-node": "1.7.0",
     "tslint": "3.15.1",
     "typescript": "2.3.4",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-server": "2.4.1"
   }
 }
