Add smoke e2e tests to circle

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e.smoke": "protractor --specs e2e/specs/app.e2e-spec.ts,e2e/specs/login.e2e-spec.ts,e2e/specs/navigation.e2e-spec.ts",
     "e2e.local": "protractor",
+    "e2e-smoke.local": "protractor --specs e2e/specs/app.e2e-spec.ts,e2e/specs/login.e2e-spec.ts,e2e/specs/navigation.e2e-spec.ts",
     "e2e.dev": "protractor --baseUrl='https://development-admin.sixcrm.com'",
+    "e2e-smoke.dev": "protractor --baseUrl='https://development-admin.sixcrm.com' --specs e2e/specs/app.e2e-spec.ts,e2e/specs/login.e2e-spec.ts,e2e/specs/navigation.e2e-spec.ts",
     "e2e.stage": "protractor --baseUrl='https://staging-admin.sixcrm.com'",
+    "e2e-smoke.stage": "protractor --baseUrl='https://staging-admin.sixcrm.com' --specs e2e/specs/app.e2e-spec.ts,e2e/specs/login.e2e-spec.ts,e2e/specs/navigation.e2e-spec.ts",
     "e2e.prod": "protractor --baseUrl='https://admin.sixcrm.com'",
+    "e2e-smoke.prod": "protractor --baseUrl='https://admin.sixcrm.com' --specs e2e/specs/app.e2e-spec.ts,e2e/specs/login.e2e-spec.ts,e2e/specs/navigation.e2e-spec.ts",
     "e2e-custom": "ng e2e",
     "webdriver-update": "webdriver-manager update"
   },
