--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "e2e.prod": "protractor --baseUrl='https://admin.sixcrm.com'",
     "e2e-smoke.prod": "protractor --baseUrl='https://admin.sixcrm.com' --specs e2e/specs/app.e2e-spec.ts,e2e/specs/login.e2e-spec.ts,e2e/specs/navigation.e2e-spec.ts",
     "e2e-custom": "ng e2e",
-    "webdriver-update": "webdriver-manager update"
+    "webdriver-update": "webdriver-manager update",
+    "lint-translations": "eslint --ext src/app/translation/translations/**.json"
   },
+  "pre-commit": [
+    "lint-translations"
+  ],
   "repository": {
     "url": "",
     "type": "git"
@@ -89,6 +93,8 @@
     "awesome-typescript-loader": "2.2.4",
     "aws-sdk": "^2.97.0",
     "codelyzer": "~1.0.0-beta.4",
+    "eslint": "^4.14.0",
+    "eslint-plugin-json": "^1.2.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
     "jsonwebtoken": "^7.2.1",
@@ -100,6 +106,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.3.2",
+    "pre-commit": "^1.2.2",
     "protractor": "5.0.0",
     "supertest": "^3.0.0",
     "ts-node": "1.7.0",
