--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "moment-timezone": "^0.5.13",
     "ng2-codemirror": "^1.1.2",
     "ng2-daterangepicker": "^2.0.6",
-    "ngx-clipboard": "^9.1.3",
+    "ngx-clipboard": "8.1.1",
     "ngx-infinite-scroll": "^0.4.2",
     "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
