--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "moment-timezone": "^0.5.13",
     "ng2-codemirror": "^1.1.2",
     "ng2-daterangepicker": "^2.0.6",
+    "ng2-file-upload": "^1.3.0",
     "ngx-clipboard": "8.1.1",
     "ngx-infinite-scroll": "^0.4.2",
     "normalize.css": "^7.0.0",
