--- a/circle.yml
+++ b/circle.yml
@@ -69,4 +69,4 @@ deployment:
       # - npm run e2e.dev
 
       # Promote changes
-      # - node libs/deployment_scripts/src/merge-branches.js deployment/deploy-config.json
+      - node libs/deployment_scripts/src/merge-branches.js deployment/deploy-config.json
