--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,6 @@ test:
   override:
     - "true"
 
-
 deployment:
   production:
     branch: production
@@ -44,7 +43,7 @@ deployment:
       - node libs/deployment_scripts/src/deploy-cloudfront.js deployment/deploy-config.json
       # - npm run webdriver-update
       # - npm run e2e.stage
-      - node libs/deployment_scripts/src/merge-branches.js deployment/deploy-config.json
+      # - node libs/deployment_scripts/src/merge-branches.js deployment/deploy-config.json
 
   development:
     branch: development
@@ -69,4 +68,4 @@ deployment:
       # - npm run e2e.dev
 
       # Promote changes
-      - node libs/deployment_scripts/src/merge-branches.js deployment/deploy-config.json
+      # - node libs/deployment_scripts/src/merge-branches.js deployment/deploy-config.json
