--- a/package.json
+++ b/package.json
@@ -23,16 +23,9 @@
     "e2e-smoke.prod": "protractor --baseUrl='https://admin.sixcrm.com' --specs e2e/specs/app.e2e-spec.ts,e2e/specs/login.e2e-spec.ts,e2e/specs/navigation.e2e-spec.ts",
     "e2e-custom": "ng e2e",
     "webdriver-update": "webdriver-manager update",
-    "lint-translations": "eslint --ext src/app/translation/translations/**.json",
-    "validate-translations": "node ./tools/validate-translations.js",
-    "validate-translation-keys": "node ./tools/validate-keys.js",
-    "check-translations": "npm run lint-translations && npm run validate-translations && npm run validate-translation-keys"
+    "lint-translations": "eslint --ext src/app/translation/translations/**.json"
   },
-  "pre-commit": [
-    "lint-translations",
-    "validate-translations",
-    "validate-translation-keys"
-  ],
+  "pre-commit": [],
   "repository": {
     "url": "",
     "type": "git"
