--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "postcss-loader": "^1.3.2",
     "pre-commit": "^1.2.2",
     "protractor": "5.2.2",
+    "protractor-beautiful-reporter": "^1.2.1",
     "supertest": "^3.0.0",
     "ts-node": "1.7.0",
     "tslint": "3.15.1",
