--- a/circle.yml
+++ b/circle.yml
@@ -48,6 +48,8 @@ deployment:
   development:
     branch: development
     commands:
+      - killall node
+
       # Set version
       - node libs/deployment_scripts/src/versioning.js
 
