--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node --max_old_space_size=2048 ./node_modules/@angular/cli/bin/ng serve -H 0.0.0.0 --environment=local",
     "start.stage": "ng serve -H 0.0.0.0 --environment=stage --aot",
     "start.prod": "ng serve -H 0.0.0.0 --prod --aot",
-    "build.dev": "node --max_old_space_size=2048 ./node_modules/@angular/cli/bin/ng build --environment=dev --prod --aot",
+    "build.dev": "node --max_old_space_size=2048 ./node_modules/@angular/cli/bin/ng build --environment=dev --dev",
     "build.local": "node --max_old_space_size=2048 ./node_modules/@angular/cli/bin/ng build --environment=local",
     "build.stage": "node --max_old_space_size=2048 ./node_modules/@angular/cli/bin/ng build --environment=stage --prod --aot",
     "build.prod": "node --max_old_space_size=2048 ./node_modules/@angular/cli/bin/ng build --prod --aot",
@@ -104,7 +104,7 @@
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.5.0",
+    "node-sass": "4.8.3",
     "postcss-loader": "^1.3.2",
     "pre-commit": "^1.2.2",
     "protractor": "5.2.2",
