Show memory status before build

--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,7 @@ checkout:
 dependencies:
   pre:
     - openssl aes-256-cbc -d -in ./deployment/config/aws.$CIRCLE_BRANCH.encrypted -k $SIX_SKELETON_KEY >> ~/.circlerc
+    - free -m
 
 test:
   override:
@@ -48,6 +49,8 @@ deployment:
   development:
     branch: development
     commands:
+      - free -m
+
       # Set version
       - node libs/deployment_scripts/src/versioning.js
 
