--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.0-beta.2",
+    "@angular/cli": "1.7.3",
     "@angular/compiler-cli": "5.2.4",
     "@angular/language-service": "5.2.4",
     "@types/chai": "^3.4.34",
