--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
     "rxjs": "5.5.2",
+    "sha1": "^1.1.1",
     "text-mask-addons": "^3.5.1",
     "tinymce": "^4.6.4",
     "uuid": "^3.0.1",
