Update webpack envs

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "e2e.stage": "protractor --baseUrl='https://staging-admin.sixcrm.com'",
     "e2e.prod": "protractor --baseUrl='https://admin.sixcrm.com'",
     "e2e-custom": "ng e2e",
-    "build.local": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-local.config.js",
-    "build.dev": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack.config.js",
+    "build.local": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config",
+    "build.dev": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-dev.config.js",
     "build.stage": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-stage.config.js",
     "build.prod": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-prod.config.js",
     "start": "node --max_old_space_size=3072 ./node_modules/webpack-dev-server/bin/webpack-dev-server --port=4200",
