--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,16 @@ jobs:
           key: dependency-cache-{{ checksum "package-lock.json" }}
       - restore_cache:
           key: git-modules-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
+          key: dist-{{ .Branch }}-{{ .Revision }}
       - run:
           name: Build Angular app
           command: ./libs/deployment_scripts/src/build-angular.sh
           no_output_timeout: 20m
+      - save_cache:
+          key: dist-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - dist
   aws_sts:
     <<: *job-defaults
     steps:
@@ -63,7 +69,7 @@ jobs:
       - restore_cache:
           key: deployment-credentials-{{ .Branch }}-{{ .Revision }}
       - run:
-          name: Set Access Credentials
+          name: Make Access Credentials directory
           command: mkdir -p deployment_credentials/
       - run:
           name: Create Credentials
@@ -87,6 +93,8 @@ jobs:
       - restore_cache:
           key: git-modules-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
+          key: dist-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
           key: deployment-credentials-{{ .Branch }}-{{ .Revision }}
       - run:
           name: Deploy App to s3
@@ -101,6 +109,8 @@ jobs:
           key: git-modules-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           key: deployment-credentials-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
+          key: dist-{{ .Branch }}-{{ .Revision }}
       - run:
           name: Add/Update CloudFront Distribution
           command: node libs/deployment_scripts/src/deploy-cloudfront.js deployment/deploy-config.json
@@ -135,9 +145,10 @@ workflows:
             - version
       - aws_sts:
           requires:
-            - build
+            - install
       - deploy_s3:
           requires:
+            - build
             - aws_sts
       - deploy_cloudfront:
           requires:
