Build: Fix merge job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,8 +126,7 @@ jobs:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
-      - restore_cache:
-          key: git-modules-{{ .Branch }}-{{ .Revision }}
+      - run: git submodule update --init --remote --merge
       - run:
           name: Promote changes
           command: node libs/deployment_scripts/src/merge-branches.js deployment/deploy-config.json
