--- a/deployment/deploy-config.json
+++ b/deployment/deploy-config.json
@@ -1,3 +1,8 @@
 {
-  "projectName": "admin.sixcrm.com"
+  "projectName": "admin.sixcrm.com",
+  "s3": {
+    "names": {
+      "priority": "admin.recursix.com"
+    }
+  }
 }
