--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/router": "5.2.4",
     "angular2-highcharts": "0.5.5",
     "angular2-jwt": "^0.1.28",
+    "angular2-markdown": "^2.2.3",
     "angular2-text-mask": "^8.0.1",
     "angulartics2": "1.5.2",
     "auth0-lock": "^11.0.0",
