--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "build.dev": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-dev.config.js",
     "build.stage": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-stage.config.js",
     "build.prod": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-prod.config.js",
+    "build.priority": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-priority.config.js",
     "start": "node --max_old_space_size=3072 ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack-local.config.js --port=4200",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
-    "build": "webpack",
     "e2e": "protractor ./protractor.conf.js"
   },
   "pre-commit": [],
