--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "font-awesome": "^4.7.0",
     "google-material-color": "^1.3.1",
     "hammerjs": "^2.0.8",
+    "html2canvas": "0.5.0-alpha1",
     "js-beautify": "^1.6.14",
+    "jspdf": "^1.3.5",
     "materialize-css": "^0.98.0",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
