--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ngx-infinite-scroll": "^0.4.2",
     "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
+    "rasterizehtml": "^1.3.0",
     "rxjs": "5.5.2",
     "sha1": "^1.1.1",
     "text-mask-addons": "^3.5.1",
