--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,13 +124,13 @@ jobs:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
+      - restore_cache:
+                key: git-modules-{{ .Branch }}-{{ .Revision }}
+      - restore_cache:
+                key: dist-{{ .Branch }}-{{ .Revision }}
       - run:
           name: Run e2e
-          command: |
-            sudo npm i -g protractor
-            sudo webdriver-manager update
-            sudo npm run e2e.dev
-
+          command: npm run e2e.dev
   merge_development:
     <<: *job-defaults
     steps:
